<resources>
    <string name="app_name">GrayTrace</string>
    <string name="nav_search">搜索</string>
    <string name="home_page">首页</string>
    <string name="near">附近</string>
    <string name="mine">我的</string>
    <string name="notification">通知</string>
    <string name="tab_title_attention">关注</string>
    <string name="tab_title_recommendation">推荐</string>
    <string name="tab_title_leaderboards">排行榜</string>
    <string name="nav_upload">上传</string>
    <string name="name">姓名</string>
    <string name="nationality">国籍</string>
    <string name="birth_place">出生地</string>
    <string name="long_sleep_place">长眠地</string>
    <string name="residence">居住地</string>
    <string name="motto">一句话描述</string>
    <string name="swim_in_world">游历人间</string>
    <string name="cover">封面</string>
    <string name="birth_day">生日</string>
    <string name="death_day">祭日</string>
    <string name="hint_birth_day">生日（格式:XXXX-XX-XX）</string>
    <string name="hint_death_day">祭日（格式:XXXX-XX-XX，可以为空）</string>
    <string name="select_country">选择国家</string>
    <string name="industry">行业</string>
    <string name="alive">仍生于忧患</string>
    <string name="dead">已死于安乐</string>
    <string name="description">描述</string>
    <string name="events">事件</string>
    <string name="add_events">添加事件</string>
    <string name="add_description">添加描述</string>
    <string name="commit">提交</string>
    <string name="hint_event_title">请输入标题</string>
    <string name="hint_event_content">添加事件详情...</string>
    <string name="edit_description">编辑描述</string>
    <string name="hint_description_content">添加对他的描述...</string>
    <string name="tab_title_official_things">格物堂</string>
    <string name="login_register">登录/注册</string>
    <string name="login">登录</string>
    <string name="login_welcome">欢迎登陆</string>
    <string name="input_username">手机号码或邮件</string>
    <string name="password">密码</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="dialog_msg_save_draft">是否保存到草稿？</string>
    <string name="more">更多</string>
    <string name="tag_event_status">表示跳转编辑事件的TextView的TAG的key，用来表示状态</string>
    <string name="tag_event_status_id">表示跳转编辑事件的TextView的TAG的key，用来表示id（事件草稿id或是事件id）</string>
    <string name="choose_edit_event">事件编辑</string>
    <string name="edit_account_info">编辑你的昵称和头像</string>
    <string name="my_creation">我的创作</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_care">我的关注</string>
    <string name="exit_login">退出登录</string>
    <string name="confirm">确认</string>
    <string name="exit_login_msg">是否确认退出登录？</string>
    <string name="tab_creation_people">人物</string>
    <string name="tab_creation_things">事物</string>
    <string name="tab_creation_events">事件</string>
    <string name="tab_creation_article">文章</string>
    <string name="count_draft">个草稿</string>
    <string name="draft_box">草稿箱</string>
    <string name="nav_people">人物</string>
    <string name="nav_edit">编辑</string>
    <string name="name_empty_error">姓名不能为空</string>
    <string name="save_draft_error">保存草稿失败,请重试</string>
    <string name="save_draft_success">已保存到草稿</string>
    <string name="serve_error">服务器错误</string>
    <string name="get_data_error">获取数据失败</string>
    <string name="title_empty_error">标题为空</string>
    <string name="content_empty_error">内容不能为空</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_error">提交失败,请重试</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="delete">删除</string>
    <string name="edit_draft_description">编辑描述草稿</string>
    <string name="update_success">更新成功</string>
    <string name="update_error">更新失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_error">删除失败</string>
    <string name="behavior_footer">com.zou.graytrace.Utils.FooterBehaviorDependAppBar</string>
    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="add_comment">添加评论</string>
    <string name="nickname_empty_error">昵称不能为空</string>
    <string name="copy">拷贝</string>
    <string name="reply_comment">回复评论</string>
    <string name="reply_to">回复给：</string>
    <string name="copy_success">内容已复制到剪切板</string>
    <string name="reply">回复</string>
    <string name="look_conversation">查看对话</string>
    <string name="delete_comment">删除评论</string>
    <string name="upvote_error">点赞遇到问题...</string>
</resources>
