<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/ll_copy">
        <ImageView android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_copy"
            android:layout_marginLeft="24dp"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/copy"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginLeft="24dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_copy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/ll_reply">
        <ImageView android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_reply"
            android:layout_marginLeft="24dp"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/reply_comment"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginLeft="24dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_reply"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/ll_delete">
        <ImageView android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_action_delete"
            android:layout_marginLeft="24dp"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/delete_comment"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginLeft="24dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>