<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_upload_edit_events"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat"
        app:title="@string/add_events"
        app:navigationIcon="@drawable/ic_action_close"/>

    <EditText
        android:id="@+id/et_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_event_title"
        android:lines="1"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/et_event_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_upload_edit_events" />
    <ScrollView android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/scrollView_event_content"
        app:layout_constraintBottom_toTopOf="@+id/cl_bottom_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_event_title">
        <com.zou.graytrace.Utils.RichEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/et_event_content"
            android:gravity="top"
            android:hint="@string/hint_event_content"
            android:textSize="14dp"
            android:background="@null"
            android:padding="5dp" />
    </ScrollView>
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/colorPrimary"
        android:id="@+id/cl_bottom_view">
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:id="@+id/iv_add_video"/>
        <ImageView
            android:id="@+id/iv_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image"
            app:layout_constraintEnd_toStartOf="@+id/iv_add_video"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>