<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_mine"
    android:id="@+id/ll_login_view">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/cardView_login"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/iv_account"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@mipmap/iv_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_account"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/edit_account_info"
                    android:textSize="13dp" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/cardView_account_info"
        app:cardUseCompatPadding="true">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:id="@+id/rl_mine_creation">
                <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_creation"
                    android:id="@+id/ic_mine_creation"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_creation"
                    android:layout_toRightOf="@+id/ic_mine_creation"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:textSize="14dp"
                    />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:id="@+id/tv_draft_count"/>
            </RelativeLayout>
            <View android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="56dp"
                android:background="#e1e1e1"/>
            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:id="@+id/rl_mine_collection">
                <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:id="@+id/ic_mine_collection"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_collection"
                    android:layout_toRightOf="@+id/ic_mine_collection"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:textSize="14dp"
                    />
            </RelativeLayout>
            <View android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="56dp"
                android:background="#e1e1e1"/>
            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:id="@+id/rl_mine_care">
                <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_care"
                    android:id="@+id/ic_mine_care"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_care"
                    android:layout_toRightOf="@+id/ic_mine_care"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:textSize="14dp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:id="@+id/cardView_account_exit"
        app:cardUseCompatPadding="true">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_login"
            android:textSize="14dp"
            android:layout_gravity="center"
            android:textColor="#f44336"/>
    </android.support.v7.widget.CardView>
</LinearLayout>